write test which validate the wanted behaviour
To validate the behaviour, we need to update the search repository stub.